--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,3 +1,5 @@
+/* Home.css */
+
 .main-content {
 	padding: 4rem 2rem;
 	background-color: #daedfe;
@@ -24,8 +26,9 @@
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 	display: inline-block;
 	text-align: center;
-	max-width: 600px;
+	max-width: 100%; /* Ensure it doesn't exceed the viewport */
 	width: 100%;
+	box-sizing: border-box; /* Includes padding in width calculation */
 	margin: 0 auto;
 }
 
